--- a/single_review.html
+++ b/single_review.html
@@ -101,7 +101,7 @@
           <!-- Main Content -->
           <div class="main-column">
             <!-- Quick Summary -->
-            <div class="alert-card alert-warning">
+            <!--<div class="alert-card alert-warning">
               <h2>
                 <i
                   class="fas fa-exclamation-triangle"
@@ -114,8 +114,10 @@
                 Однако за внешним имиджем скрываются претензии со стороны трейдеров, технические нестыковки и ряд тревожных сигналов, 
                 на которые стоит обратить внимание перед инвестированием.
               </p>
+            </div>-->
+            <div class="banner-invest" >
+              <img src="image/banner1.png" />
             </div>
-
             <!-- Main Content from Admin -->
             <div class="review-container">
               <div class="content-text">
@@ -152,7 +154,14 @@
                       <i class="fas fa-envelope" style="color: #667eea"></i>
                       Email
                     </th>
-                    <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="31424441415e43457141444143585c541f525e5c">[email&#160;protected]</a></td>
+                    <td>
+                      <a
+                        href="/cdn-cgi/l/email-protection"
+                        class="__cf_email__"
+                        data-cfemail="31424441415e43457141444143585c541f525e5c"
+                        >[email&#160;protected]</a
+                      >
+                    </td>
                   </tr>
                   <tr>
                     <th>
@@ -172,30 +181,48 @@
 
                 <h2>🧭 Кто перед нами?</h2>
                 <p>
-                  PU Prime продвигает себя как глобального брокера нового поколения. Официально компания запущена в 2015 году и с тех пор вышла на международный рынок, получив лицензии в Австралии (ASIC), Сейшелах (FSA), Маврикии (FSC) и ЮАР (FSCA). Упоминается также наличие страховых фондов и защитных механизмов клиентских средств.
+                  PU Prime продвигает себя как глобального брокера нового
+                  поколения. Официально компания запущена в 2015 году и с тех
+                  пор вышла на международный рынок, получив лицензии в Австралии
+                  (ASIC), Сейшелах (FSA), Маврикии (FSC) и ЮАР (FSCA).
+                  Упоминается также наличие страховых фондов и защитных
+                  механизмов клиентских средств.
                 </p>
 
                 <p>
-                  На сайте указаны впечатляющие цифры: более 300 000 клиентов, поддержка в 190 странах и свыше 1000 торговых инструментов. Проект активно инвестирует в маркетинг, включая спонсорство футбольной федерации Аргентины.
+                  На сайте указаны впечатляющие цифры: более 300 000 клиентов,
+                  поддержка в 190 странах и свыше 1000 торговых инструментов.
+                  Проект активно инвестирует в маркетинг, включая спонсорство
+                  футбольной федерации Аргентины.
                 </p>
 
                 <h3>💬 Что пишут клиенты о ПиЮ Прайм</h3>
                 <blockquote>
-                  "Открыл ECN-счёт, спреды узкие, но сделки исполняются странно. Часто проскальзывания."
+                  "Открыл ECN-счёт, спреды узкие, но сделки исполняются странно.
+                  Часто проскальзывания."
                 </blockquote>
 
                 <blockquote>
-                  "Поддержка отвечает, но только шаблонами. На конкретные вопросы — тишина."
+                  "Поддержка отвечает, но только шаблонами. На конкретные
+                  вопросы — тишина."
                 </blockquote>
 
                 <h3>🚩 Есть ли тревожные сигналы?</h3>
                 <p>
-                  PU Prime не выглядит откровенно мошенническим проектом, но в его работе есть элементы, которые могут стать критическими в моменте. Отсутствие полной прозрачности, неоднозначные отзывы и проблемы с технической частью заслуживают отдельного внимания.
+                  PU Prime не выглядит откровенно мошенническим проектом, но в
+                  его работе есть элементы, которые могут стать критическими в
+                  моменте. Отсутствие полной прозрачности, неоднозначные отзывы
+                  и проблемы с технической частью заслуживают отдельного
+                  внимания.
                 </p>
 
                 <h2>✅ Итоги: стоит ли доверять?</h2>
                 <p>
-                  PU Prime нельзя однозначно отнести к мошенническим платформам, но и полностью надёжным брокером назвать сложно. Претензии к исполнению, неполная прозрачность условий и офшорная регистрация снижают уровень доверия. Новичкам стоит быть особенно осторожными.
+                  PU Prime нельзя однозначно отнести к мошенническим платформам,
+                  но и полностью надёжным брокером назвать сложно. Претензии к
+                  исполнению, неполная прозрачность условий и офшорная
+                  регистрация снижают уровень доверия. Новичкам стоит быть
+                  особенно осторожными.
                 </p>
               </div>
             </div>
@@ -213,17 +240,30 @@
                     <i class="fas fa-chevron-down faq-icon"></i>
                   </button>
                   <div class="faq-answer">
-                    <p>PU Prime имеет лицензии от нескольких регуляторов, но есть жалобы на исполнение ордеров и техническую поддержку. Рекомендуется начинать с минимального депозита и тщательно тестировать платформу.</p>
+                    <p>
+                      PU Prime имеет лицензии от нескольких регуляторов, но есть
+                      жалобы на исполнение ордеров и техническую поддержку.
+                      Рекомендуется начинать с минимального депозита и тщательно
+                      тестировать платформу.
+                    </p>
                   </div>
                 </div>
 
                 <div class="faq-item">
                   <button class="faq-question" onclick="toggleFAQ(this)">
-                    <span>Какие проблемы могут возникнуть при работе с PU Prime?</span>
+                    <span
+                      >Какие проблемы могут возникнуть при работе с PU
+                      Prime?</span
+                    >
                     <i class="fas fa-chevron-down faq-icon"></i>
                   </button>
                   <div class="faq-answer">
-                    <p>Основные проблемы включают: проскальзывания при исполнении ордеров, медленная техподдержка, ограничения по бонусным программам и технические сбои платформы в периоды высокой волатильности.</p>
+                    <p>
+                      Основные проблемы включают: проскальзывания при исполнении
+                      ордеров, медленная техподдержка, ограничения по бонусным
+                      программам и технические сбои платформы в периоды высокой
+                      волатильности.
+                    </p>
                   </div>
                 </div>
 
@@ -233,7 +273,16 @@
                     <i class="fas fa-chevron-down faq-icon"></i>
                   </button>
                   <div class="faq-answer">
-                    <p>Официальные контакты: телефон +248 4373 105, email <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d7a4a2a7a7b8a5a397a7a2a7a5bebab2f9b4b8ba">[email&#160;protected]</a>. Также доступен онлайн-чат на сайте. Время ответа может составлять от нескольких часов до нескольких дней.</p>
+                    <p>
+                      Официальные контакты: телефон +248 4373 105, email
+                      <a
+                        href="/cdn-cgi/l/email-protection"
+                        class="__cf_email__"
+                        data-cfemail="d7a4a2a7a7b8a5a397a7a2a7a5bebab2f9b4b8ba"
+                        >[email&#160;protected]</a
+                      >. Также доступен онлайн-чат на сайте. Время ответа может
+                      составлять от нескольких часов до нескольких дней.
+                    </p>
                   </div>
                 </div>
 
@@ -243,17 +292,29 @@
                     <i class="fas fa-chevron-down faq-icon"></i>
                   </button>
                   <div class="faq-answer">
-                    <p>Да, среди надёжных альтернativ можно рассмотреть XM Group, Exness, FXOpen и другие брокеры с лучшей репутацией и более прозрачными условиями работы.</p>
+                    <p>
+                      Да, среди надёжных альтернativ можно рассмотреть XM Group,
+                      Exness, FXOpen и другие брокеры с лучшей репутацией и
+                      более прозрачными условиями работы.
+                    </p>
                   </div>
                 </div>
 
                 <div class="faq-item">
                   <button class="faq-question" onclick="toggleFAQ(this)">
-                    <span>Что делать, если возникли проблемы с выводом средств?</span>
+                    <span
+                      >Что делать, если возникли проблемы с выводом
+                      средств?</span
+                    >
                     <i class="fas fa-chevron-down faq-icon"></i>
                   </button>
                   <div class="faq-answer">
-                    <p>Сначала обратитесь в техподдержку брокера с подробным описанием проблемы. Если это не помогает, можно подать жалобу в соответствующий регулятор или обратиться к специалистам по возврату средств через чарджбэк.</p>
+                    <p>
+                      Сначала обратитесь в техподдержку брокера с подробным
+                      описанием проблемы. Если это не помогает, можно подать
+                      жалобу в соответствующий регулятор или обратиться к
+                      специалистам по возврату средств через чарджбэк.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -281,7 +342,11 @@
                         <i class="fas fa-star star inactive"></i>
                       </div>
                     </div>
-                    <p>Торгую через PU Prime уже полгода. В целом нормально, но бывают проскальзывания на новостях. Поддержка отвечает долго.</p>
+                    <p>
+                      Торгую через PU Prime уже полгода. В целом нормально, но
+                      бывают проскальзывания на новостях. Поддержка отвечает
+                      долго.
+                    </p>
                   </div>
                 </div>
                 <div class="comment-content-wrap">
@@ -299,7 +364,10 @@
                         <i class="fas fa-star star inactive"></i>
                       </div>
                     </div>
-                    <p>Попробовала торговать, но не понравилось. Платформа часто подвисает, а спреды больше заявленных.</p>
+                    <p>
+                      Попробовала торговать, но не понравилось. Платформа часто
+                      подвисает, а спреды больше заявленных.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -435,5 +503,9 @@
 
     <!-- Footer -->
     <footer class="footer" id="footer"></footer>
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+    <script
+      data-cfasync="false"
+      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
+  </body>
 </html>
