--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 />
               </div>
 
-              <div class="form-group">
+              <div class="form-group iti-container">
                 <input
                   type="tel"
                   id="clientPhone"
